# routes/api.php
@@ -1,8 +1,10 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\BoardColumnController;
 use App\Http\Controllers\Api\V1\IssueController;
 use App\Http\Controllers\Api\V1\ProjectController;
+use App\Http\Controllers\Api\V1\SprintController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('login', [AuthController::class, 'login'])
@@ -16,4 +18,6 @@ Route::middleware(['auth:sanctum', 'abilities:mobile'])->group(function (): void
     Route::get('projects/{project}', [ProjectController::class, 'show'])->name('api.v1.projects.show');
     Route::get('projects/{project}/issues', [IssueController::class, 'index'])->name('api.v1.projects.issues.index');
     Route::get('projects/{project}/issues/{issue}', [IssueController::class, 'show'])->name('api.v1.projects.issues.show');
+    Route::get('projects/{project}/board-columns', [BoardColumnController::class, 'index'])->name('api.v1.projects.board-columns.index');
+    Route::get('projects/{project}/sprints', [SprintController::class, 'index'])->name('api.v1.projects.sprints.index');
 });
